solved overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,8 @@ body {
 	width: 100%;
 	min-height: 100%;
 	list-style: none;
+
+	overflow-x: hidden;
 }
 
 a {
@@ -78,4 +80,5 @@ a {
 		rgba(183, 90, 100, 1) 31%
 	);
 
+	overflow-x: hidden;
 }
